# hdmimatrix

./: BUILD.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  test.py
examples/: cec_control.py  debug_connection.py  power_off.py  power_on.py  power_to_input_2.py  status.py
hdmimatrix/: __init__.py  hdmimatrix.py
tests/: conftest.py  test_async.py  test_base.py  test_commands.py  test_sync.py
